tempfile/auto_impl/tests/compile-fail/method_attr_invalid.stderr
error: expected arguments for 'ferris_for_life' in parenthesis `()`, found nothing
 --> $DIR/method_attr_invalid.rs:6:17
  |
6 |     #[auto_impl(ferris_for_life)]
  |                 ^^^^^^^^^^^^^^^
